--- a/PRN212HotelManagement/PRN212HotelManagement/AdminWPF.xaml
+++ b/PRN212HotelManagement/PRN212HotelManagement/AdminWPF.xaml
@@ -15,7 +15,7 @@
         <!-- Navbar -->
         <StackPanel Grid.Row="0" Background="#3AA9AD" Orientation="Horizontal">
             <Button x:Name="btn_Profile" Content="Profile" Width="91" Height="40" Margin="5" Background="Transparent" 
-                    Foreground="White" BorderThickness="0" Click="Button_Click"/>
+                    Foreground="White" BorderThickness="0" Click="btn_Account_Click"/>
             <Button x:Name="btn_Bookings" Content="Bookings" Width="92" Height="40" Margin="5" Background="Transparent" 
                     Foreground="White" BorderThickness="0"/>
             <Button x:Name="btn_ManageRoom" Content="Manage Room" Width="124" Height="40" Background="Transparent" 
@@ -103,7 +103,7 @@
                                 Foreground="White" 
                                 HorizontalAlignment="Left" 
                                 Margin="269,-6,0,-7" 
-                                Width="111"/>
+                                Width="111" Click="btn_ChangePassword_Click"/>
                     </Grid>
                 </Border>
 
