--- a/PRN212HotelManagement/PRN212HotelManagement/AdminWPF.xaml
+++ b/PRN212HotelManagement/PRN212HotelManagement/AdminWPF.xaml
@@ -21,7 +21,7 @@
             <Button x:Name="btn_ManageRoom" Content="Manage Room" Width="124" Height="40" Background="Transparent" 
                     Foreground="White" BorderThickness="0" Click="btn_ManageRoom_Click"/>
             <Button x:Name="btn_ManageUser" Width="129" Height="40" Margin="5" Background="Transparent" 
-                    Foreground="White" BorderThickness="0" Content="Manage Users"/>
+                    Foreground="White" BorderThickness="0" Content="Manage Users" Click="btn_ManageUser_Click"/>
             <Button x:Name="btn_ManageService" Content="Manage Services" Width="108" Height="40" Margin="5" Background="Transparent" 
                     Foreground="White" BorderThickness="0"/>
             <Button x:Name="btn_Transaction" Content="Transaction" Width="100" Height="40" Margin="5" Background="Transparent" 
@@ -149,7 +149,6 @@
                                    Grid.Column="1" 
                                    VerticalAlignment="Center"/>
                         <Button x:Name="btn_ChangePhone" Grid.Column="1" Content="Update PhoneNumber" HorizontalAlignment="Left" Margin="254,0,0,0" Height="30" VerticalAlignment="Center" Width="126"/>
-
                     </Grid>
                 </Border>
 
