--- a/PRN212HotelManagement/PRN212HotelManagement/StaffWPF.xaml
+++ b/PRN212HotelManagement/PRN212HotelManagement/StaffWPF.xaml
@@ -5,8 +5,206 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PRN212HotelManagement"
         mc:Ignorable="d"
-        Title="StaffWPF" Height="450" Width="800">
+        Title="Staff Dashboard" Height="450" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <!-- Navbar -->
+        <StackPanel Grid.Row="0" Background="#3AA9AD" Orientation="Horizontal">
+            <Button x:Name="btn_Profile" 
+                    Content="Profile" 
+                    Width="91" 
+                    Height="40" 
+                    Margin="5" 
+                    Background="Transparent" 
+                    Foreground="White" 
+                    BorderThickness="0" 
+                    Click="btn_Profile_Click"/>
+
+            <Button x:Name="btn_Rooms" 
+                    Content="Rooms" 
+                    Width="92" 
+                    Height="40" 
+                    Margin="5" 
+                    Background="Transparent" 
+                    Foreground="White" 
+                    BorderThickness="0" 
+                    Click="btn_Rooms_Click"/>
+
+            <Button x:Name="btn_Bookings" 
+                    Content="Bookings" 
+                    Width="92" 
+                    Height="40" 
+                    Margin="5" 
+                    Background="Transparent" 
+                    Foreground="White" 
+                    BorderThickness="0" 
+                    Click="btn_Bookings_Click"/>
+
+            <Button x:Name="btn_Logout" 
+                    Content="Logout" 
+                    Width="100" 
+                    Height="40" 
+                    Margin="5" 
+                    Background="Transparent" 
+                    Foreground="White" 
+                    BorderThickness="0" 
+                    HorizontalAlignment="Right" 
+                    Click="btn_Logout_Click"/>
+        </StackPanel>
+
+        <!-- Content area -->
+        <Grid Grid.Row="1" Margin="22,43,10,93" Background="White">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <!-- Left side - Profile Image -->
+            <StackPanel Grid.Column="0" Margin="10">
+                <Border Width="150" Height="150" CornerRadius="75">
+                    <Image Source="pack://application:,,,/Images/profile.png"/>
+                </Border>
+                <TextBlock x:Name="txt_ProfileName" 
+                           FontSize="20" 
+                           FontWeight="Bold" 
+                           HorizontalAlignment="Center"
+                           Margin="0,0,0,10"/>
+            </StackPanel>
+
+            <!-- Right side - Profile Information -->
+            <Grid Grid.Column="1" Margin="20,10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <!-- Username Row -->
+                <Border Grid.Row="0" Grid.ColumnSpan="2" 
+                        Background="#f5f5f5" 
+                        Margin="0,5" 
+                        CornerRadius="5">
+                    <Grid Margin="10,8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="120"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Username:" 
+                                   FontWeight="SemiBold" 
+                                   VerticalAlignment="Center"/>
+                        <TextBlock x:Name="txtUsername" 
+                                   Grid.Column="1" 
+                                   VerticalAlignment="Center"/>
+                    </Grid>
+                </Border>
+
+                <!-- Password Row -->
+                <Border Grid.Row="1" Grid.ColumnSpan="2" 
+                        Background="#f5f5f5" 
+                        Margin="0,5" 
+                        CornerRadius="5">
+                    <Grid Margin="10,8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="120"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Password:" 
+                                   FontWeight="SemiBold" 
+                                   VerticalAlignment="Center"/>
+                        <TextBlock x:Name="txtPassword" 
+                                   Grid.Column="1" 
+                                   Text="********"
+                                   VerticalAlignment="Center"/>
+                        <Button Grid.Column="1" 
+                                Content="Change Password" 
+                                Background="#3AA9AD"
+                                Foreground="White" 
+                                HorizontalAlignment="Left" 
+                                Margin="230,-6,0,-6" 
+                                Width="111" 
+                                Click="btn_ChangePassword_Click"/>
+                    </Grid>
+                </Border>
+
+                <!-- Email Row -->
+                <Border Grid.Row="2" 
+                        Background="#f5f5f5" 
+                        Margin="0,4,0,6" 
+                        CornerRadius="5">
+                    <Grid Margin="10,8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="120"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Email:" 
+                                   FontWeight="SemiBold" 
+                                   VerticalAlignment="Center"/>
+                        <TextBlock x:Name="txtEmail" 
+                                   Grid.Column="1" 
+                                   VerticalAlignment="Center"/>
+                        <Button x:Name="btn_ChangeEmail" 
+                                Grid.Column="1" 
+                                Content="Update Email" 
+                                HorizontalAlignment="Left" 
+                                Margin="260,0,0,-8" 
+                                Width="80" 
+                                Click="btn_ChangeEmail_Click"/>
+                    </Grid>
+                </Border>
+
+                <!-- Phone Row -->
+                <Border Grid.Row="3" Grid.ColumnSpan="2" 
+                        Background="#f5f5f5" 
+                        Margin="0,5" 
+                        CornerRadius="5">
+                    <Grid Margin="10,8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="120"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Phone:" 
+                                   FontWeight="SemiBold" 
+                                   VerticalAlignment="Center"/>
+                        <TextBlock x:Name="txtPhone" 
+                                   Grid.Column="1" 
+                                   VerticalAlignment="Center"/>
+                        <Button x:Name="btn_ChangePhone" 
+                                Grid.Column="1" 
+                                Content="Update PhoneNumber" 
+                                HorizontalAlignment="Left" 
+                                Margin="211,5,0,0" 
+                                Height="20" 
+                                VerticalAlignment="Top" 
+                                Width="134" 
+                                Click="btn_ChangePhone_Click"/>
+                    </Grid>
+                </Border>
+
+                <!-- Role Row -->
+                <Border Grid.Row="3" Grid.ColumnSpan="2" 
+                        Background="#f5f5f5" 
+                        Margin="0,47,0,-37" 
+                        CornerRadius="5">
+                    <Grid Margin="10,10,10,6">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="120"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Role:" 
+                                   FontWeight="SemiBold" 
+                                   VerticalAlignment="Center"/>
+                        <TextBlock x:Name="txtRole" 
+                                   Grid.Column="1" 
+                                   Text="STAFF"
+                                   VerticalAlignment="Center"/>
+                    </Grid>
+                </Border>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
